--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/dice_and_dealers
+MONGO_URI=mongodb+srv://admin:admin123@cluster0.vj10ihw.mongodb.net/dice_and_dealers?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=chave_super_secreta
